--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,11 @@
                 <artifactId>springfox-boot-starter</artifactId>
                 <version>3.0.0</version>
             </dependency>
+            <dependency>
+                <groupId>org.projectlombok</groupId>
+                <artifactId>lombok</artifactId>
+                <version>1.18.36</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 </project>
